# pcos-edge-agent

./: .env.example  .gitignore  CHANGELOG.md  CODEMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.devin/workflows/: pr.md  test.md
.github/ISSUE_TEMPLATE/: ticket.md
.github/workflows/: ci.yml
.windsurf/plans/: megaplan.md
.windsurf/workflows/: benchmark.md  deploy.md  lint.md  release.md
agents/skills/: README.md
apps/android/: README.md  build.gradle.kts  settings.gradle.kts
apps/chrome-extension/: background.js  chrome_ai.js  content.js  manifest.json  offscreen.html  sidepanel.css  sidepanel.html  sidepanel.js  validation.html  webgpu-engine.js
apps/flutter/: README.md  pubspec.yaml
apps/ios/: README.md
apps/watch/: build.gradle.kts
benchmarks/: baseline-v1.0.json
broker/: __init__.py  cli.py  config.py  logging.py  main.py
broker/context/: __init__.py  context_schema.py  desktop_reporter.py
broker/planner/: __init__.py  planner.py
broker/policies/: __init__.py  escalation.py  privacy.py
broker/router/: __init__.py  router.py
context-broker/: context_schema.py  router.py
docs/: NPU_SETUP.md  ROADMAP.md  SECURITY_AUDIT_v1.0.md  android.md  api-reference.md  architecture.md  chrome-extension.md  configuration.md  demo-video-script.md  index.md  pixel-watch.md  routing-spec.md  tickets.md
hf_space/: Dockerfile  README.md  app.py  requirements.txt
models/gemma/: README.md
scripts/: run_benchmarks.py  setup_litert_server.py
tests/: test_bridge.py  test_cloud_escalation.py  test_desktop_12b.py  test_e2e_integration.py  test_hf_space.py  test_integration.py  test_npu_soc_mapping.py  test_pieces_client.py  test_playwright_e2e.py  test_release_security.py  test_router.py
(+59 files in other folders)
