[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcos-context-broker"
version = "1.0.0"
description = "Personal Context Operating System — local-first hybrid AI routing broker"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "PCOS Contributors"},
]
keywords = ["ai", "routing", "edge", "chrome", "android", "gemini", "litert", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
cloud = [
    "google-genai>=1.0.0",
    "openai>=1.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "gradio>=4.39.0",
]
all = [
    "pcos-context-broker[cloud,dev]",
]

[project.urls]
Homepage = "https://github.com/Ryukijano/pcos-edge-agent"
Repository = "https://github.com/Ryukijano/pcos-edge-agent"
Documentation = "https://github.com/Ryukijano/pcos-edge-agent#readme"
Issues = "https://github.com/Ryukijano/pcos-edge-agent/issues"

[project.scripts]
pcos-broker = "broker.main:run"
pcos-route = "broker.cli:route_cli"

[tool.setuptools.packages.find]
include = ["broker*", "memory*", "models*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
